[UPDATE] fixed missed atributes for Culture asset - refresh modules data base improved - asset types selector, at import - minor fixes

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@ crashlytics-build.properties
 
 Assets/Settings/BDT_settings.asset.meta
 Assets/Settings/BDT_settings.asset
+UserSettings/Layouts/CurrentMaximizeLayout.dwlt
