--- a/Assets/BDT/package.json
+++ b/Assets/BDT/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "com.markpryk.BDT",
+    "name": "com.markpryk.bdt",
     "version": "0.0.62.0b",
     "displayName": "Bannerlord Data Tools",
     "description": "Modding data tools for Mount&Blade II: Bannerlord",
