--- a/Assets/BDT/package.json
+++ b/Assets/BDT/package.json
@@ -1,6 +1,6 @@
 {
     "name": "com.markpryk.bdt",
-    "version": "0.0.62.0b",
+    "version": "0.0.62-b.0",
     "displayName": "Bannerlord Data Tools",
     "description": "Modding data tools for Mount&Blade II: Bannerlord",
     "documentationUrl": "https://github.com/markpryk/BannerlordDataTools#editors-documentation--overview",
